--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Platzigram</string>
     <string name="title_activity_referencia">ReferenciaActivity</string>
+    <string name="hint_user_name">Nombre de usuario</string>
+
 </resources>
