Internacionalización de textos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Platzigram</string>
     <string name="title_activity_referencia">ReferenciaActivity</string>
     <string name="hint_user_name">Nombre de usuario</string>
+    <string name="hint_password">Constraseña</string>
 
 </resources>
