--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="hint_user_name">Nombre de usuario</string>
     <string name="hint_password">Constraseña</string>
     <string name="text_button_login">Iniciar</string>
+    <string name="dont_have_account">¿No tienes cuenta?, </string>
+    <string name="create_here">Crea una aquí</string>
 
 </resources>
